No longer hide bottom behind bottom bar

--- a/people.less
+++ b/people.less
@@ -8,6 +8,9 @@ body {
   padding-top: 60px;
 }
 
+.container {
+    margin-bottom: 50px;
+}
 
 .toolbox {
     display: none;
